killer-sudoku-helper: changes requested in PR